# adventOfCode

./: README.md  pyproject.toml
src/2023/one/: one_alphanumeric.py  one_numeric copy.py
src/2023/three/: readme.md  three.py
src/2023/two/: two.py
src/2024/01/difference/: main.py
src/2024/01/similarity/: main.py  readme.md
src/2024/02/: main.py
src/2024/03/: main.py
src/2024/04/: main.py
src/2024/05/: main.py
src/2024/06/: main.py
src/eoc/one/: one.py
src/eoc/two/: readme.md  two.py
