[project]
name = "event-of-code-2023"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "funfried", email = "florian.unfried@ionos.com"},
]
dependencies = [
    "loguru>=0.7.2",
    "mypy>=1.13.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
